reupload with code for saving animation

--- a/rotating_cube.ipynb
+++ b/rotating_cube.ipynb
@@ -171,9 +171,11 @@
     "# Create the animation\n",
     "ani = FuncAnimation(fig, animate, frames=np.arange(0, 360, 1), fargs=(ax, data, 20, 1), interval=50, blit=False)\n",
     "\n",
-    "\n",
     "# Display the animation\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# Save the animation\n",
+    "# ani.save('animation.mp4', writer='ffmpeg', fps=30)\n"
    ]
   },
   {
